--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.1",
     "redux": "^5.0.0",
     "redux-thunk": "^3.1.0"
