--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
-    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-redux": "^9.0.4",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.1",
